upload/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'<>'", "'='", "'<'", "'>'", "'<='", "'>='", "'['", 
                     "']'", "'..'", "','", "':'", "';'", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='" ]

    symbolicNames = [ "<INVALID>", "TRADICOMMENT", "BLOCKCOMMENT", "LINECOMMENT", 
                      "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", "DO", 
                      "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "WITH", "FUNCTION", "PROCEDURE", "VAR", "TRUE", 
                      "FALSE", "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", 
                      "STRING", "NOT", "AND", "OR", "DIV", "MOD", "ADD", 
                      "SUB", "MUL", "DIVREAL", "NEQ", "EQ", "LT", "GT", 
                      "LTE", "GTE", "LSQ", "RSQ", "DD", "CM", "CL", "SM", 
                      "LB", "RB", "INTLIT", "REALLIT", "STRINGLIT", "ASSIGN", 
                      "IDEN", "RC", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_mptype = 0
    RULE_program = 1
    RULE_declare = 2
    RULE_variable_declare = 3
    RULE_sub_vardecl = 4
    RULE_function_declare = 5
    RULE_procedure_declare = 6
    RULE_parameter_list = 7
    RULE_parameter_declare = 8
    RULE_array_type = 9
    RULE_exp_list = 10
    RULE_exp = 11
    RULE_exp_one = 12
    RULE_exp_two = 13
    RULE_index_exp = 14
    RULE_statement = 15
    RULE_lhs_assignment = 16
    RULE_assignment_statement = 17
    RULE_if_statement = 18
    RULE_while_statement = 19
    RULE_for_statement = 20
    RULE_break_statement = 21
    RULE_continue_statement = 22
    RULE_return_statement = 23
    RULE_compound_statement = 24
    RULE_with_statement = 25
    RULE_call_exp = 26
    RULE_funcall = 27

    ruleNames =  [ "mptype", "program", "declare", "variable_declare", "sub_vardecl", 
                   "function_declare", "procedure_declare", "parameter_list", 
                   "parameter_declare", "array_type", "exp_list", "exp", 
                   "exp_one", "exp_two", "index_exp", "statement", "lhs_assignment", 
                   "assignment_statement", "if_statement", "while_statement", 
                   "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "compound_statement", "with_statement", 
                   "call_exp", "funcall" ]

    EOF = Token.EOF
    TRADICOMMENT=1
    BLOCKCOMMENT=2
    LINECOMMENT=3
    BREAK=4
    CONTINUE=5
    FOR=6
    TO=7
    DOWNTO=8
    DO=9
    IF=10
    THEN=11
    ELSE=12
    RETURN=13
    WHILE=14
    BEGIN=15
    END=16
    WITH=17
    FUNCTION=18
    PROCEDURE=19
    VAR=20
    TRUE=21
    FALSE=22
    ARRAY=23
    OF=24
    REAL=25
    BOOLEAN=26
    INTEGER=27
    STRING=28
    NOT=29
    AND=30
    OR=31
    DIV=32
    MOD=33
    ADD=34
    SUB=35
    MUL=36
    DIVREAL=37
    NEQ=38
    EQ=39
    LT=40
    GT=41
    LTE=42
    GTE=43
    LSQ=44
    RSQ=45
    DD=46
    CM=47
    CL=48
    SM=49
    LB=50
    RB=51
    INTLIT=52
    REALLIT=53
    STRINGLIT=54
    ASSIGN=55
    IDEN=56
    RC=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class MptypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def array_type(self):
            return self.getTypedRuleContext(MPParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_mptype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMptype" ):
                return visitor.visitMptype(self)
            else:
                return visitor.visitChildren(self)




    def mptype(self):

        localctx = MPParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mptype)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(MPParser.INTEGER)
                pass
            elif token in [MPParser.REAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(MPParser.REAL)
                pass
            elif token in [MPParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.match(MPParser.BOOLEAN)
                pass
            elif token in [MPParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.match(MPParser.STRING)
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclareContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclareContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.declare()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 68
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declare(self):
            return self.getTypedRuleContext(MPParser.Variable_declareContext,0)


        def function_declare(self):
            return self.getTypedRuleContext(MPParser.Function_declareContext,0)


        def procedure_declare(self):
            return self.getTypedRuleContext(MPParser.Procedure_declareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MPParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.variable_declare()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.function_declare()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.procedure_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def sub_vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Sub_vardeclContext)
            else:
                return self.getTypedRuleContext(MPParser.Sub_vardeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_variable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declare" ):
                return visitor.visitVariable_declare(self)
            else:
                return visitor.visitChildren(self)




    def variable_declare(self):

        localctx = MPParser.Variable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MPParser.VAR)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.sub_vardecl()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDEN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sub_vardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDEN)
            else:
                return self.getToken(MPParser.IDEN, i)

        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_sub_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_vardecl" ):
                return visitor.visitSub_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def sub_vardecl(self):

        localctx = MPParser.Sub_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sub_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MPParser.IDEN)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.CM:
                self.state = 82
                self.match(MPParser.CM)
                self.state = 83
                self.match(MPParser.IDEN)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(MPParser.CL)
            self.state = 90
            self.mptype()
            self.state = 91
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDEN(self):
            return self.getToken(MPParser.IDEN, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MPParser.Parameter_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def variable_declare(self):
            return self.getTypedRuleContext(MPParser.Variable_declareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_function_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = MPParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MPParser.FUNCTION)
            self.state = 94
            self.match(MPParser.IDEN)
            self.state = 95
            self.match(MPParser.LB)
            self.state = 96
            self.parameter_list()
            self.state = 97
            self.match(MPParser.RB)
            self.state = 98
            self.match(MPParser.CL)
            self.state = 99
            self.mptype()
            self.state = 100
            self.match(MPParser.SM)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 101
                self.variable_declare()


            self.state = 104
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDEN(self):
            return self.getToken(MPParser.IDEN, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MPParser.Parameter_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def variable_declare(self):
            return self.getTypedRuleContext(MPParser.Variable_declareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_declare" ):
                return visitor.visitProcedure_declare(self)
            else:
                return visitor.visitChildren(self)




    def procedure_declare(self):

        localctx = MPParser.Procedure_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procedure_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MPParser.PROCEDURE)
            self.state = 107
            self.match(MPParser.IDEN)
            self.state = 108
            self.match(MPParser.LB)
            self.state = 109
            self.parameter_list()
            self.state = 110
            self.match(MPParser.RB)
            self.state = 111
            self.match(MPParser.SM)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 112
                self.variable_declare()


            self.state = 115
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Parameter_declareContext)
            else:
                return self.getTypedRuleContext(MPParser.Parameter_declareContext,i)


        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SM)
            else:
                return self.getToken(MPParser.SM, i)

        def getRuleIndex(self):
            return MPParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MPParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.IDEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.parameter_declare()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SM:
                    self.state = 118
                    self.match(MPParser.SM)
                    self.state = 119
                    self.parameter_declare()
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parameter_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDEN)
            else:
                return self.getToken(MPParser.IDEN, i)

        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_parameter_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declare" ):
                return visitor.visitParameter_declare(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declare(self):

        localctx = MPParser.Parameter_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MPParser.IDEN)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.CM:
                self.state = 129
                self.match(MPParser.CM)
                self.state = 130
                self.match(MPParser.IDEN)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(MPParser.CL)
            self.state = 137
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSQ(self):
            return self.getToken(MPParser.LSQ, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def RSQ(self):
            return self.getToken(MPParser.RSQ, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUB)
            else:
                return self.getToken(MPParser.SUB, i)

        def getRuleIndex(self):
            return MPParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MPParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MPParser.ARRAY)
            self.state = 140
            self.match(MPParser.LSQ)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 141
                self.match(MPParser.SUB)


            self.state = 144
            self.match(MPParser.INTLIT)
            self.state = 145
            self.match(MPParser.DD)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 146
                self.match(MPParser.SUB)


            self.state = 149
            self.match(MPParser.INTLIT)
            self.state = 150
            self.match(MPParser.RSQ)
            self.state = 151
            self.match(MPParser.OF)
            self.state = 152
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_exp_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_list" ):
                return visitor.visitExp_list(self)
            else:
                return visitor.visitChildren(self)




    def exp_list(self):

        localctx = MPParser.Exp_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exp_list)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.TRUE, MPParser.FALSE, MPParser.NOT, MPParser.SUB, MPParser.LB, MPParser.INTLIT, MPParser.REALLIT, MPParser.STRINGLIT, MPParser.IDEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.exp(0)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.CM:
                    self.state = 155
                    self.match(MPParser.CM)
                    self.state = 156
                    self.exp(0)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_one(self):
            return self.getTypedRuleContext(MPParser.Exp_oneContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpContext,i)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)


